<resources>
    <string name="app_name">MetaTemp</string>
    <string name="action_home">Home</string>
    <string name="action_graph">Graph</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings from mbientlab's TemperatureTrackerAndroid -->
    <string name="label_scan">Scan</string>
    <string name="label_stop">Stop</string>
    <string name="label_ok">OK</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="metawear">MetaWear</string>
    <string name="no_metawear_connected">No MetaWear Connected</string>
    <string name="metawear_connected">MetaWear Connected</string>
    <string name="metawear_syncing">MetaWear Syncing</string>
    <string name="error_title">Error</string>
    <string name="error_no_bluetooth">Bluetooth device not detected</string>
    <string name="dialog_no">No</string>
    <string name="dialog_yes">Yes</string>
    <string name="pairing_title">Pair Device</string>
    <string name="pairing_text">Do you see a blinking blue LED on the MetaWear?</string>
    <string name="toast_connected">MetaWear Connected</string>
    <string name="toast_disconnected">MetaWear Disconnected</string>
    <string name="toast_no_board">No MetaWear Connected</string>
    <string name="toast_in_demo_mode">Can\'t do that in demo mode.</string>
    <string name="message_soft_reset">Board Soft Reset Issued</string>
    <string name="error_soft_reset">Board Reset Failed</string>
    <string name="thermistor_not_supported">Thermistor not supported or firmware needs updating.</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_low_threshold">Low Threshold</string>
    <string name="pref_default_low_threshold">40</string>
    <string name="pref_title_high_threshold">High Threshold</string>
    <string name="pref_default_high_threshold">80</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="title_activity_mwdevice_confirm_fragment">MWDeviceConfirmFragment</string>
    <string name="title_activity_mwscanner_fragment">MWScannerFragment</string>
</resources>
